# Computer-System-Architecture

./: container.py  main.py  shrub.py
AVSHomework1/: AVSHomework1  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  outFile1.txt  outFile2.txt  test1.txt
AVSHomework1/Plants/Files-with-cpp/: container.cpp  flower.cpp  plant.cpp  randomGenerator.cpp  shrub.cpp  tree.cpp
AVSHomework1/Plants/Files-with-h/: constants.h  container.h  flower.h  plant.h  randomGenerator.h  shrub.h  tree.h
AVSHomework1/Reports/: report-with-characteristic.txt
AVSHomework1/Tests/: testRnd.txt
SCAHW4/: CMakeLists.txt  main.c  outFile1.txt  outFile2.txt  plant.c  task
SCAHW4/header_files/: constants.h  container.h  plant.h  rnd.h
SCAHomework2/: CMakeLists.txt  README-HIGH-PIORITY  main.cpp
SCAHomework2/Plants/: container.cpp  container.h  flower.cpp  flower.h  plant.h  rnd.h  shrub.cpp  shrub.h  tree.cpp  tree.h
SCAHomework2/Reports/: report
SCAHomework2/Results/: outfile01.txt  outfile02.txt  res.txt  test.txt
SCAHomework2/Tests/: test1.txt  test2.txt  test3.txt
SCAHomework5/: CMakeLists.txt  afterBuy.txt  beforeBuy.txt  customer.cpp  customer.h  main.cpp  report.txt  store.cpp  store.h
pythonCSAHW3/: container.py  extender.py  flower.py  shrub.py  tree.py
